remove List.of (java 8)