@@ -4,6 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -56,9 +57,9 @@ public class ExcelTest {
             list.add(Converter.toMap("a", 1, "b", "AA"));
             list.add(Converter.toMap("a", 2, "b", "BB"));
             
-            excel.writeTableByListMap("B2", List.of("a", "b"), list);
+            excel.writeTableByListMap("B2", Arrays.asList("a", "b"), list);
             
-            List<List<String>> rv = excel.readTable("B2", 2, e -> List.of(
+            List<List<String>> rv = excel.readTable("B2", 2, e -> Arrays.asList(
                 Excel.toIntegerString(e.get(0), -1),
                 Excel.toString(e.get(1), null)
             )); 
@@ -79,9 +80,9 @@ public class ExcelTest {
             list.add(Converter.toMap("a", 1, "b", "AA"));
             list.add(Converter.toMap("a", 2, "b", "BB"));
             
-            excel.writePivotTableByListMap("B2", List.of("a", "b"), list);
+            excel.writePivotTableByListMap("B2", Arrays.asList("a", "b"), list);
             
-            List<List<String>> rv = excel.readPivotTable("B2", 2, e -> List.of(
+            List<List<String>> rv = excel.readPivotTable("B2", 2, e -> Arrays.asList(
                 Excel.toIntegerString(e.get(0), -1),
                 Excel.toString(e.get(1), null)
             ));
@@ -102,7 +103,7 @@ public class ExcelTest {
             list.add(Converter.toMap("a", 1, "b", "AA"));
             list.add(Converter.toMap("a", 2, "b", "BB"));
             
-            excel.writeTableByListMap("B2", List.of("a", "b"), list);
+            excel.writeTableByListMap("B2", Arrays.asList("a", "b"), list);
             
             assertEquals(excel.move("B2").getInt(-1), 1);
             assertEquals(excel.move("B3").getInt(-1), 2);
@@ -120,7 +121,7 @@ public class ExcelTest {
             list.add(Converter.toMap("a", 1, "b", "AA"));
             list.add(Converter.toMap("a", 2, "b", "BB"));
             
-            excel.writePivotTableByListMap("B2", List.of("a", "b"), list);
+            excel.writePivotTableByListMap("B2", Arrays.asList("a", "b"), list);
             
             assertEquals(excel.move("B2").getInt(-1), 1);
             assertEquals(excel.move("C2").getInt(-1), 2);
@@ -133,7 +134,7 @@ public class ExcelTest {
     @Test
     public void writeHorizontalList() throws IOException {
         try (Excel excel = Excel.create()) {
-            excel.writeHorizontalList("A1", List.of("1", "2", "3"));
+            excel.writeHorizontalList("A1", Arrays.asList("1", "2", "3"));
             
             assertEquals(excel.move("A1").getString(), "1");
             assertEquals(excel.move("B1").getString(), "2");
@@ -144,7 +145,7 @@ public class ExcelTest {
     @Test
     public void writeVerticalList() throws IOException {
         try (Excel excel = Excel.create()) {
-            excel.writeVerticalList("A1", List.of("1", "2", "3"));
+            excel.writeVerticalList("A1", Arrays.asList("1", "2", "3"));
             
             assertEquals(excel.move("A1").getString(), "1");
             assertEquals(excel.move("A2").getString(), "2");
@@ -166,7 +167,7 @@ public class ExcelTest {
             list.add(new TestObject(11, "AAA"));
             list.add(new TestObject(22, "BBB"));
             
-            excel.writeTableByListClass("B2", List.of("a", "b"), list);
+            excel.writeTableByListClass("B2", Arrays.asList("a", "b"), list);
             
             assertEquals(excel.move("B2").getInt(-1), 11);
             assertEquals(excel.move("B3").getInt(-1), 22);
@@ -190,7 +191,7 @@ public class ExcelTest {
             list.add(new TestObject(11, "AAA"));
             list.add(new TestObject(22, "BBB"));
             
-            excel.writePivotTableByListClass("B2", List.of("a", "b"), list);
+            excel.writePivotTableByListClass("B2", Arrays.asList("a", "b"), list);
             
             assertEquals(excel.move("B2").getInt(-1), 11);
             assertEquals(excel.move("C2").getInt(-1), 22);
